# engram

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
Formula/: engram.rb
completions/: engram.bash  engram.zsh
docs/: ROADMAP.md  architecture.md  templates.md
lib/: __init__.py  embeddings.py  engram_db.py  frontmatter.py  gaps.py  qdrant.py
npm/: package.json
scripts/: release.sh
src/engram_memory/: __init__.py  cli.py  scripts.py
templates/d365/: claude.md.snippet  seed.toml
templates/default/: claude.md.snippet  schema.md  seed.toml
templates/devops/: seed.toml
templates/devops/procedural/: deploy-kubernetes.md  setup-github-actions.md
templates/devops/semantic/: docker-patterns.md  kubernetes-patterns.md
templates/python/: seed.toml
templates/python/procedural/: deploy-python-package.md  setup-python-project.md
templates/python/semantic/: python-patterns.md  testing-patterns.md
templates/react/: seed.toml
templates/react/procedural/: setup-nextjs-project.md  testing-react.md
templates/react/semantic/: nextjs-patterns.md  react-patterns.md
tests/: run_all.sh  test_contradict.py  test_frontmatter.py  test_gaps.py  test_hooks.py  test_init.py  test_qdrant.py  test_search.py
