[project]
name = "engram-memory"
version = "0.1.0"
description = "Persistent 5-layer memory system for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["claude", "memory", "ai", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/YOUR_USER/engram"
Repository = "https://github.com/YOUR_USER/engram"
Issues = "https://github.com/YOUR_USER/engram/issues"

[project.scripts]
engram = "engram.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
