[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-memory"
version = "0.6.0"
description = "Persistent 5-layer memory system for Claude Code and AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Engram Contributors"}]
keywords = ["claude", "memory", "ai", "coding", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/grynn-in/engram"
Repository = "https://github.com/grynn-in/engram"
Issues = "https://github.com/grynn-in/engram/issues"

[project.scripts]
engram = "engram_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_memory"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "bin/",
    "lib/",
    "templates/",
    "completions/",
    "README.md",
    "LICENSE",
]
